--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "cli app for webdev masters",
   "main": "app.js",
   "preferGlobal": true,
-  "bin": { "climemes": "app.js" },
+  "bin": {
+    "climemes": "bin/bin.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/KartulUdus/CliMemes.git"
+    "type": "git",
+    "url": "https://github.com/KartulUdus/CliMemes.git"
   },
   "author": "Kartul",
   "license": "ISC",
